--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "SDK for analysing HIVE & Hive-Engine earnings.",
   "type": "module",
   "scripts": {
-    "start": "node rewards.js",
+    "start": "node src/rewards.js",
     "test:node": "node tests/example.js",
-    "test:cli1": "node rewards.js --inbound caspermoeller89 --from chessRewards=karina.gpt --hours 72",
-    "test:cli2": "node rewards.js --outbound cryptoshots.tips cryptoshotsdoom karina.gpt --days 7",
+    "test:cli1": "node src/rewards.js --inbound caspermoeller89 --from chessRewards=karina.gpt --hours 72",
+    "test:cli2": "node src/rewards.js --outbound cryptoshots.tips cryptoshotsdoom karina.gpt --days 7",
     "build:web": "webpack --config webpack.config.cjs",
     "serve:web": "npx http-server dist"
   },
@@ -39,17 +39,17 @@
     "sdk"
   ],
   "exports": {
-    ".": "./index.js"
+    ".": "./src/index.js"
   },
   "bin": {
-    "hiverewards": "./index.js"
+    "hiverewards": "./src/index.js"
   },
   "files": [
-    "index.js",
+    "src/",
     "dist/"
   ],
-  "main": "index.js",
-  "module": "index.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "browser": "dist/hiverewards.bundle.js",
   "sideEffects": false
 }
