--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "hiverewards",
   "version": "1.0.0",
-  "description": "SDK for analysing HIVE & Hive-Engine earnings.",
+  "description": "SDK for analysing HIVE & Hive-Engine earnings",
   "type": "module",
   "scripts": {
     "start": "node src/rewards.js",
     "test:node": "node tests/example.js",
-    "test:cli1": "node src/rewards.js --inbound caspermoeller89 --from chessRewards=karina.gpt --hours 72",
+    "test:cli1": "node src/rewards.js --inbound dantrin --from chessRewards=karina.gpt --hours 72",
     "test:cli2": "node src/rewards.js --outbound cryptoshots.tips cryptoshotsdoom karina.gpt --days 7",
     "build:web": "webpack --config webpack.config.cjs",
     "serve:web": "npx http-server dist"
